Add home translation widget and its css

--- a/_inc/assets/sass/style.scss
+++ b/_inc/assets/sass/style.scss
@@ -27,7 +27,8 @@ Author URI: https://fariaslab.com/
   'layout/site-header',
   'layout/site-footer',
   'layout/home-hero',
-  'layout/home-training';
+  'layout/home-training',
+  'layout/home-translation';
 
 // Components
 @import
