Add home testimonials widget and its css

--- a/_inc/assets/sass/base/_base.sass
+++ b/_inc/assets/sass/base/_base.sass
@@ -8,6 +8,9 @@ a, a:link, a:visited
   color: inherit
   cursor: pointer
 
+strong
+  font-weight: 800
+
 img, svg
   display: block
   height: auto
