--- a/_inc/assets/sass/style.scss
+++ b/_inc/assets/sass/style.scss
@@ -28,7 +28,8 @@ Author URI: https://fariaslab.com/
   'layout/site-footer',
   'layout/home-hero',
   'layout/home-training',
-  'layout/home-translation';
+  'layout/home-translation',
+  'layout/home-testimonials';
 
 // Components
 @import
