--- a/style.css
+++ b/style.css
@@ -133,6 +133,10 @@ a, a:link, a:visited {
   cursor: pointer;
 }
 
+strong {
+  font-weight: 800;
+}
+
 img, svg {
   display: block;
   height: auto;
@@ -918,6 +922,51 @@ section > .inner-wrap {
     margin-left: 61px;
   }
 }
+.wgp-home-testimonials > .inner-wrap {
+  padding: 37px 80px;
+}
+.wgp-home-testimonials .testimonial-list {
+  width: 720px;
+  letter-spacing: 1.2px;
+}
+.wgp-home-testimonials .testimonial-list-item {
+  position: relative;
+  background: #F6F4EF;
+  border-radius: 16px;
+}
+.wgp-home-testimonials .testimonial-list-item:not(:last-child) {
+  margin-bottom: 16px;
+}
+.wgp-home-testimonials .icon-quote {
+  position: absolute;
+  left: 10px;
+  top: 11px;
+  width: 48px;
+}
+.wgp-home-testimonials .testimonial-text {
+  padding: 33px 60px 33px 40px;
+  position: relative;
+}
+.wgp-home-testimonials .author-wrap {
+  position: absolute;
+  bottom: 24px;
+  left: 676px;
+  padding: 17px 23px 20px;
+  background: #fff;
+  border-radius: 8px;
+}
+.wgp-home-testimonials .author-name {
+  white-space: nowrap;
+}
+.wgp-home-testimonials .author-company {
+  white-space: nowrap;
+  margin-top: -2px;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 800;
+}
+
 .hf-phone-link {
   display: inline-block;
   font-size: 24px;
