--- a/_inc/assets/sass/layout/_home-translation.sass
+++ b/_inc/assets/sass/layout/_home-translation.sass
@@ -13,6 +13,9 @@
     max-width: 720px
     margin-bottom: 29px
 
+    .mobile
+      display: none
+
   .section-img-wrap
     position: absolute
     right: 24px
@@ -47,6 +50,12 @@
 
     .section-title
       margin-bottom: 23px
+
+      .desktop
+        display: none
+
+      .mobile
+        display: block
 
     .section-img-wrap
       right: auto
