Fixed minor css issue on home training widget

--- a/_inc/assets/sass/layout/_home-training.sass
+++ b/_inc/assets/sass/layout/_home-training.sass
@@ -58,6 +58,9 @@
       top: 147px
       width: 404px
 
+    .icon-list
+      margin-left: 376px
+
     .more-link
       margin-left: 437px
 
@@ -83,6 +86,9 @@
       width: 100%
       max-width: 404px
       margin-bottom: 30px
+
+    .icon-list
+      margin-left: 0
 
     .more-link
       margin-left: 61px
