--- a/_inc/assets/sass/layout/_home-testimonials.sass
+++ b/_inc/assets/sass/layout/_home-testimonials.sass
@@ -49,6 +49,12 @@
 
 @media only screen and (max-width: 1239px)
 
+  .wgp-home-testimonials > .inner-wrap
+    @include tablet-side-padding(37px)
+
+
+@media only screen and (max-width: 1023px)
+
   .wgp-home-testimonials
     padding: 21px 0 60px
 
