--- a/_inc/assets/sass/layout/_site-footer.sass
+++ b/_inc/assets/sass/layout/_site-footer.sass
@@ -76,6 +76,15 @@
 
     .inner-wrap
       @include tablet-side-padding(32px)
+
+
+
+
+@media only screen and (max-width: 1023px)
+
+  .wgp-site-footer
+
+    .inner-wrap
       align-items: center
 
     .footer-menu
