--- a/_inc/assets/sass/base/_base.sass
+++ b/_inc/assets/sass/base/_base.sass
@@ -155,11 +155,14 @@ section
 
 @media only screen and (max-width: 1239px)
 
+  section > .inner-wrap
+    @include tablet-side-padding
+
+
+@media only screen and (max-width: 1023px)
+
   section
     overflow: visible
-
-    > .inner-wrap
-      @include tablet-side-padding
 
   .section-title
     font-size: 32px
