--- a/_inc/assets/sass/style.scss
+++ b/_inc/assets/sass/style.scss
@@ -29,7 +29,8 @@ Author URI: https://fariaslab.com/
   'layout/home-hero',
   'layout/home-training',
   'layout/home-translation',
-  'layout/home-testimonials';
+  'layout/home-testimonials',
+  'layout/home-clients';
 
 // Components
 @import
