--- a/_inc/assets/sass/layout/_site-footer.sass
+++ b/_inc/assets/sass/layout/_site-footer.sass
@@ -77,7 +77,11 @@
     .inner-wrap
       @include tablet-side-padding(32px)
 
+      > *
+        margin-right: 35px
 
+    .socials-wrap
+      flex-grow: 0
 
 
 @media only screen and (max-width: 1023px)
