Add home blog widget file, css and img

--- a/_inc/assets/sass/style.scss
+++ b/_inc/assets/sass/style.scss
@@ -30,7 +30,8 @@ Author URI: https://fariaslab.com/
   'layout/home-training',
   'layout/home-translation',
   'layout/home-testimonials',
-  'layout/home-clients';
+  'layout/home-clients',
+  'layout/home-blog';
 
 // Components
 @import
