Update some base sass

--- a/_inc/assets/sass/abstracts/_variables.sass
+++ b/_inc/assets/sass/abstracts/_variables.sass
@@ -6,6 +6,7 @@ $wgp-grey-bg: #F6F4EF
 $wgp-grey-border: #E0DED8
 $wgp-lightgrey: #9C9B98
 $wgp-darkgrey: #4D4D4D
+$wgp-darkgrey-footer: #464542
 
 $wgp-lightgreen: #5AE7CC
 $wgp-green: #00c2b4
