--- a/_inc/assets/sass/layout/_home-blog.sass
+++ b/_inc/assets/sass/layout/_home-blog.sass
@@ -15,6 +15,15 @@
     flex-direction: column
     position: relative
     min-height: 654px
+    background: $wgp-darkgrey-footer
+
+    &:before
+      @include content-block
+      position: absolute
+      width: 50vw
+      height: 100%
+      right: 0
+      background: $wgp-darkgrey-footer
 
   .section-img-wrap
     position: absolute
@@ -79,11 +88,15 @@
     > .posts-list
       padding-left: calc(100% * 44 / 1240)
 
+    .section-header:before
+      display: none
+
 
 @media only screen and (max-width: 1023px)
 
   .wgp-home-blog
     color: #fff
+    background: $wgp-darkgrey-footer
 
     .inner-wrap
       flex-direction: column
