Import about hero sass file

--- a/_inc/assets/sass/style.scss
+++ b/_inc/assets/sass/style.scss
@@ -31,7 +31,8 @@ Author URI: https://fariaslab.com/
   'layout/home-translation',
   'layout/home-testimonials',
   'layout/home-clients',
-  'layout/home-blog';
+  'layout/home-blog',
+  'layout/about-hero';
 
 // Components
 @import
