--- a/_inc/assets/sass/layout/_site-header.sass
+++ b/_inc/assets/sass/layout/_site-header.sass
@@ -2,16 +2,9 @@
 
 .wgp-site-header
   background: $wgp-grey-bg
-  height: 145px
   font-weight: 800
   text-transform: uppercase
   letter-spacing: 1px
-  z-index: 1
-
-  > .inner-wrap
-    background: $wgp-grey-bg
-    position: fixed
-    width: 100%
 
   .btn-menu-wrap
     display: none
@@ -35,6 +28,16 @@
         color: $wgp-green-hover
         border-color: $wgp-green
 
+  .lang-switcher
+    li
+      a
+        font-size: 12px
+        line-height: 14px
+        padding-bottom: 13px
+
+      &:first-child a
+        margin-right: 15px
+
   .header-menu
     justify-content: flex-end
     flex-grow: 1
@@ -50,9 +53,6 @@
 
 
 .wgp-site-header-expanded
-  position: relative
-  z-index: 2
-  transition: opacity .2s .2s
 
   .inner-wrap
     @include flex-align(space-between)
@@ -83,27 +83,20 @@
   .hf-icons-wrap
     margin-right: 80px
 
-  .lang-switcher
-    li
-      a
-        font-size: 12px
-        line-height: 14px
-        padding-bottom: 13px
-
-      &:first-child a
-        margin-right: 15px
-
 
 .wgp-site-header-collapsed
   @include flex-align(null, center)
-  position: absolute
+  background: $wgp-grey-bg
+  position: fixed
   left: 0
-  bottom: 0
+  top: 0
+  transform: translateY(-100%)
   width: 100%
   height: 58px
-  opacity: 0
-  transition: opacity .2s 0s
-  z-index: 1
+  transition: transform .3s cubic-bezier(0.075, 0.82, 0.165, 1)
+
+  &.show
+    transform: translateY(0)
 
   .inner-wrap
     @include flex-align(null, center)
@@ -120,14 +113,61 @@
     &:not(:last-child) a
       margin-right: 24px
 
-.collapsed
-  .wgp-site-header-expanded
-    opacity: 0
-    transition-delay: 0s
-  .wgp-site-header-collapsed
+
+.wgp-site-header-dropdown
+  position: fixed
+  margin: -4px -7px 0 0
+  width: 184px
+  padding: 45px 35px
+  background: #fff
+  border-radius: 8px
+  box-shadow: 2px 8px 16px 0 rgba(0, 0, 0, .1)
+  transform-origin: 100% 0
+  transform: scale(0)
+  opacity: 0
+  transition: transform .3s cubic-bezier(0.785, 0.135, 0.15, 0.86), opacity .15s cubic-bezier(0.785, 0.135, 0.15, 0.86)
+
+  &.show
+    transform: scale(1)
     opacity: 1
-    transition-delay: .2s
-    z-index: 3
+
+  .lang-switcher
+    justify-content: center
+    margin-bottom: 29px
+
+  .header-menu
+    flex-direction: column
+    align-items: center
+
+    li, li a
+      border-width: 0
+      padding: 0
+
+    li:not(:last-child)
+      margin-bottom: 32px
+
+      a
+        margin: 0
+
+  .btn-close-dropdown
+    @include flex-align(center, center)
+    width: 40px
+    height: 40px
+    background: $wgp-green
+    border-radius: 50%
+    position: absolute
+    right: -14px
+    top: 4px
+    transform: translateY(-50%)
+    transition: background .2s
+    box-shadow: 1px 4px 8px 0 rgba(0, 0, 0, .1)
+
+    &:hover, &:active
+      background: $wgp-green-hover
+
+    .icon-close
+      width: 16px
+
 
 
 @media only screen and (max-width: 1239px)
@@ -168,11 +208,8 @@
 
 @media only screen and (max-width: 767px)
 
-  .wgp-site-header
-    height: 163px
-
-    .btn-menu-wrap
-      display: flex
+  .wgp-site-header .btn-menu-wrap
+    display: flex
 
   .wgp-site-header-expanded
 
