--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ img, svg {
 
 .site-wrap {
   min-width: 375px;
-  min-height: 200vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -300,6 +300,12 @@ section > .inner-wrap {
   section > .inner-wrap {
     padding: 0 calc(100% * 48 / 768);
   }
+
+  .hero-title.smaller-on-tablet {
+    font-size: 32px;
+    line-height: 40px;
+    letter-spacing: 1.6px;
+  }
 }
 @media only screen and (max-width: 1023px) {
   section {
@@ -346,9 +352,15 @@ section > .inner-wrap {
     letter-spacing: 1px;
   }
 
-  .hero-title {
+  .hero-title:not(.smaller-on-tablet) {
     font-size: 36px;
     line-height: 48px;
+  }
+
+  .hero-title.smaller-on-tablet {
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: 0;
   }
 
   .section-title {
@@ -367,16 +379,9 @@ section > .inner-wrap {
 }
 .wgp-site-header {
   background: #F6F4EF;
-  height: 145px;
   font-weight: 800;
   text-transform: uppercase;
   letter-spacing: 1px;
-  z-index: 1;
-}
-.wgp-site-header > .inner-wrap {
-  background: #F6F4EF;
-  position: fixed;
-  width: 100%;
 }
 .wgp-site-header .btn-menu-wrap {
   display: none;
@@ -402,6 +407,14 @@ section > .inner-wrap {
   color: #009B90;
   border-color: #00c2b4;
 }
+.wgp-site-header .lang-switcher li a {
+  font-size: 12px;
+  line-height: 14px;
+  padding-bottom: 13px;
+}
+.wgp-site-header .lang-switcher li:first-child a {
+  margin-right: 15px;
+}
 .wgp-site-header .header-menu {
   justify-content: flex-end;
   flex-grow: 1;
@@ -415,11 +428,6 @@ section > .inner-wrap {
   margin-right: 32px;
 }
 
-.wgp-site-header-expanded {
-  position: relative;
-  z-index: 2;
-  transition: opacity 0.2s 0.2s;
-}
 .wgp-site-header-expanded .inner-wrap {
   display: flex;
   justify-content: space-between;
@@ -454,26 +462,21 @@ section > .inner-wrap {
 .wgp-site-header-expanded .hf-icons-wrap {
   margin-right: 80px;
 }
-.wgp-site-header-expanded .lang-switcher li a {
-  font-size: 12px;
-  line-height: 14px;
-  padding-bottom: 13px;
-}
-.wgp-site-header-expanded .lang-switcher li:first-child a {
-  margin-right: 15px;
-}
 
 .wgp-site-header-collapsed {
   display: flex;
   align-items: center;
-  position: absolute;
+  background: #F6F4EF;
+  position: fixed;
   left: 0;
-  bottom: 0;
+  top: 0;
+  transform: translateY(-100%);
   width: 100%;
   height: 58px;
-  opacity: 0;
-  transition: opacity 0.2s 0s;
-  z-index: 1;
+  transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.wgp-site-header-collapsed.show {
+  transform: translateY(0);
 }
 .wgp-site-header-collapsed .inner-wrap {
   display: flex;
@@ -492,14 +495,61 @@ section > .inner-wrap {
   margin-right: 24px;
 }
 
-.collapsed .wgp-site-header-expanded {
+.wgp-site-header-dropdown {
+  position: fixed;
+  margin: -4px -7px 0 0;
+  width: 184px;
+  padding: 45px 35px;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 2px 8px 16px 0 rgba(0, 0, 0, 0.1);
+  transform-origin: 100% 0;
+  transform: scale(0);
   opacity: 0;
-  transition-delay: 0s;
+  transition: transform 0.3s cubic-bezier(0.785, 0.135, 0.15, 0.86), opacity 0.15s cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
-.collapsed .wgp-site-header-collapsed {
+.wgp-site-header-dropdown.show {
+  transform: scale(1);
   opacity: 1;
-  transition-delay: 0.2s;
-  z-index: 3;
+}
+.wgp-site-header-dropdown .lang-switcher {
+  justify-content: center;
+  margin-bottom: 29px;
+}
+.wgp-site-header-dropdown .header-menu {
+  flex-direction: column;
+  align-items: center;
+}
+.wgp-site-header-dropdown .header-menu li, .wgp-site-header-dropdown .header-menu li a {
+  border-width: 0;
+  padding: 0;
+}
+.wgp-site-header-dropdown .header-menu li:not(:last-child) {
+  margin-bottom: 32px;
+}
+.wgp-site-header-dropdown .header-menu li:not(:last-child) a {
+  margin: 0;
+}
+.wgp-site-header-dropdown .btn-close-dropdown {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background: #00c2b4;
+  border-radius: 50%;
+  position: absolute;
+  right: -14px;
+  top: 4px;
+  transform: translateY(-50%);
+  transition: background 0.2s;
+  box-shadow: 1px 4px 8px 0 rgba(0, 0, 0, 0.1);
+}
+.wgp-site-header-dropdown .btn-close-dropdown:hover, .wgp-site-header-dropdown .btn-close-dropdown:active {
+  background: #009B90;
+}
+.wgp-site-header-dropdown .btn-close-dropdown .icon-close {
+  width: 16px;
 }
 
 @media only screen and (max-width: 1239px) {
@@ -536,9 +586,6 @@ section > .inner-wrap {
   }
 }
 @media only screen and (max-width: 767px) {
-  .wgp-site-header {
-    height: 163px;
-  }
   .wgp-site-header .btn-menu-wrap {
     display: flex;
   }
@@ -1170,6 +1217,16 @@ section > .inner-wrap {
   flex-direction: column;
   position: relative;
   min-height: 654px;
+  background: #464542;
+}
+.wgp-home-blog .section-header:before {
+  display: block;
+  content: "";
+  position: absolute;
+  width: 50vw;
+  height: 100%;
+  right: 0;
+  background: #464542;
 }
 .wgp-home-blog .section-img-wrap {
   position: absolute;
@@ -1233,10 +1290,14 @@ section > .inner-wrap {
   .wgp-home-blog .inner-wrap > .posts-list {
     padding-left: calc(100% * 44 / 1240);
   }
+  .wgp-home-blog .inner-wrap .section-header:before {
+    display: none;
+  }
 }
 @media only screen and (max-width: 1023px) {
   .wgp-home-blog {
     color: #fff;
+    background: #464542;
   }
   .wgp-home-blog .inner-wrap {
     flex-direction: column;
@@ -1280,6 +1341,47 @@ section > .inner-wrap {
   .wgp-home-blog .blog-tagline {
     font-size: 20px;
     line-height: 28px;
+  }
+}
+.wgp-about-hero {
+  background: #F6F4EF;
+}
+.wgp-about-hero > .inner-wrap {
+  padding: 12px 80px;
+  position: relative;
+}
+.wgp-about-hero > .inner-wrap > * {
+  max-width: 710px;
+}
+.wgp-about-hero .section-tagline {
+  margin-bottom: 12px;
+  display: none;
+}
+.wgp-about-hero .hero-title {
+  padding-bottom: 20px;
+}
+.wgp-about-hero .section-img-wrap {
+  position: absolute;
+  left: 801px;
+  bottom: 0;
+  max-width: 703px;
+  width: calc(100vw - 801px);
+  overflow: hidden;
+}
+.wgp-about-hero .section-img {
+  width: 703px;
+  max-width: none;
+}
+
+@media only screen and (max-width: 1239px) {
+  .wgp-about-hero > .inner-wrap {
+    padding: 0 calc(100% * 48 / 768);
+  }
+  .wgp-about-hero > .inner-wrap > * {
+    max-width: 428px;
+  }
+  .wgp-about-hero .hero-title {
+    padding-bottom: 31px;
   }
 }
 .hf-phone-link {
