Add about summary widget, its css and signature svg file

--- a/_inc/assets/sass/style.scss
+++ b/_inc/assets/sass/style.scss
@@ -32,7 +32,8 @@ Author URI: https://fariaslab.com/
   'layout/home-testimonials',
   'layout/home-clients',
   'layout/home-blog',
-  'layout/about-hero';
+  'layout/about-hero',
+  'layout/about-summary';
 
 // Components
 @import
