--- a/_inc/assets/sass/base/_base.sass
+++ b/_inc/assets/sass/base/_base.sass
@@ -3,6 +3,7 @@
 body
   font: 300 20px/28px 'Gilroy', sans-serif
   color: $wgp-darkgrey
+  max-width: 100%
 
 a, a:link, a:visited
   color: inherit
@@ -152,6 +153,25 @@ section
   .icon-stairs, .icon-website
     width: 18px
 
+.team-avatar-wrap
+  flex-shrink: 0
+  width: 80px
+  height: 80px
+  border-radius: 50%
+  overflow: hidden
+  background: #D8D8D8
+  margin-right: 12px
+
+  .avatar-img
+    object-fit: cover
+    width: 100%
+    height: 100%
+
+.team-member-name
+  font-size: 32px
+  line-height: 40px
+  letter-spacing: 1.6px
+  margin-bottom: 7px
 
 @media only screen and (max-width: 1239px)
 
@@ -208,7 +228,7 @@ section
     font-size: 36px
     line-height: 48px
 
-  .hero-title.smaller-on-tablet
+  .hero-title.smaller-on-tablet, .team-member-name
     font-size: 24px
     line-height: 32px
     letter-spacing: 0
@@ -220,6 +240,14 @@ section
 
   .body-text
     letter-spacing: 1px
+
+  .more-link
+    font-size: 14px
+    line-height: 17px
+    letter-spacing: 1.2px
+
+    .arrow-icon
+      margin-bottom: 2px
 
   .icon-list
     margin-left: 0
